network-policy/network-policy/00-deny-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-by-default
  namespace: foo-demo
spec:
  podSelector: {}
  ingress: []
