network-policy/network-policy/04-allow-external-namespaces.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-by-default
  namespace: foo-demo
spec:
  podSelector: {}
  ingress: []
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-ingress
  namespace: foo-demo
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          policy-group.network.openshift.io/ingress: ""
  podSelector: {}
  policyTypes:
  - Ingress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-port-from-external
  namespace: foo-demo
spec:
  podSelector:
    matchLabels:
      app: foo-app
  from:
  - namespaceSelector:
      matchLabels:
        zone: "zone-bar"
  - podSelector:
      matchLabels:
        app: bar-app
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 5000
